# scalable_ollama_farm

./: .env.example  .gitignore  Plan_Trabajo_Granja_LLM.md  README.md  benchmarks.ipynb  docker-compose.yml  locust_results_stats.csv  locust_results_stats_history.csv  locustfile.py  pull_ollama_models.sh  pyproject.toml  resultados.md  resultados_visualizacion.html  test_litellm.py
LatexPresentacion/: estilos.fdb_latexmk  estilos.fls  estilos.tex  main.aux  main.blg  main.fdb_latexmk  main.fls  main.nav  main.out  main.snm  main.tex  main.toc
LatexSwadFinal/: .contenido.tex.swp  contenido.tex  indice.fdb_latexmk  indice.fls  indice.tex  lenguajes.tex  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.run.xml  main.tex  main.toc  paquetes.fdb_latexmk  paquetes.fls  paquetes.tex  pdf.sh  portada.tex  referencias.bib
LatexSwadFinal/Images/: enumera.sh
litellm/: config.yaml  configv2.yaml
nginx/: default.conf  nginx.conf
scripts/: ollama-embed-init.sh  ollama-init.sh
